--- a/tribal.html
+++ b/tribal.html
@@ -34,11 +34,11 @@
 
       <br />
       <br />Paying attention to the shared identity (religion, race, gender,
-      ideology) of a group which shares an opinion can help identify bias. In
-      this way, it is also useful to observe what the characteristics of those
-      that you share an opinion with are. If you think Javascript is the best
-      programming language, and so do all your classmates from your Javascript
-      bootcamp — something’s fishy.
+      ideology) of similar-opinion holders can help identify bias. In this way,
+      it is also useful to observe what the characteristics of those that agree
+      with you are. If you think Javascript is the best programming language,
+      and so do all your classmates from your Javascript bootcamp — something’s
+      fishy.
 
       <br />
       <br />
@@ -47,19 +47,22 @@
       model serves its purpose well, and their food stays fresh. Simplified
       models miss a lot of very important details. When two people disagree
       about how much energy is wasted keeping the fridge door open for too long,
-      these important details get filled intuitively. Our disputants “get” the
+      these missing details get filled intuitively. Our disputants “get” the
       fridge. They will disagree strongly. Having successfully used a fridge for
       decades, surely their model is the correct one? Neither of them have real
       information on how much energy the fridge spends on cooling the air inside
       it, and their models give them false confidence.
 
       <br />
-      <br />Many of our opinions form this way as we encounter situations.
-      Finding a way to determine whether an opinion’s source is a quickly filled
-      gap in a simple model helps to discard poor opinions. Did the opinion feel
-      intuitive as soon as it made sense to form it, or do we know why we hold
-      it? Does the person presenting the opinion to you have it because it just
-      “makes sense”, despite being asked for more reasoning?
+      <br />
+      Our opinions are often hastily formed as we face new situations.
+      Discerning whether these opinions are merely quick fixes to our limited
+      understanding is important, and so is noticing when others hold opinions
+      formed this way. Asking if your opinion emerged instinctively when a
+      situation demanded it can help. When someone presents an opinion that
+      "make sense" to them, probe further. Always try to identify the true roots
+      of important opinions.
+
       <br />
       <br />
       Nobody holds an opinion which doesn’t make sense from their point of view.
