--- a/tribal.html
+++ b/tribal.html
@@ -79,5 +79,6 @@
       back and forth would lead to the same place is a great way to save an hour
       of time.
     </p>
+    <a href="cardcard.vcf" download>Download Our Contact</a>
   </body>
 </html>
