--- a/dishes.html
+++ b/dishes.html
@@ -115,6 +115,12 @@
       <span class="more">Marionberry ice cream cone, Van Leeuwen</span>
       <br />
       <br />
+      <span class="city">Nice</span>
+      <br />
+      <span class="more">Croissant, Boulangerie-pâtisserie des musiciens</span>
+
+      <br />
+      <br />
       <span class="city">Cornwall</span>
       <br />
       <span class="once">Rei, Slice of Cornwall</span>
