--- a/dishes.html
+++ b/dishes.html
@@ -72,6 +72,8 @@
       <br />
       <span class="more">Cheese pizza, Mr O1</span>
       <br />
+      <span class="once">Steak au poivre, Alamo Drafthouse</span>
+      <br />
       <br />
       <span class="city">College Park</span>
       <br />
@@ -97,6 +99,8 @@
       <span class="city">New York City</span>
       <br />
       <span class="more">Fresh cream compote toast, Black Fox Coffee Co</span>
+      <br />
+      <span class="once">Steak au poivre, Balthazar</span>
       <br />
       <span class="more">Cheese slice, Joe's Pizza</span>
       <br />
@@ -134,6 +138,25 @@
       <span class="once"
         >Singaporean chili crab, The Seafood Restaurant Padstow</span
       >
+      <br />
+      <br />
+      <span class="city">Riyadh</span>
+      <br />
+      <span class="more">Mixed Grill, Assaraya Turkish Restaurant</span>
+      <br />
+      <span class="more">Chicken steakhouse burger, Burger King</span>
+      <br />
+      <br />
+      <span class="city">Cape Town</span>
+      <br />
+      <span class="once">Seafood platter, Kloof Street House</span>
+      <br />
+      <br />
+      <span class="city">Istanbul</span>
+      <br />
+      <span class="more">Burek, Lokanta Mimi</span>
+      <br />
+      <span class="more">Chocolate Baklava, Karaköy Güllüoğlu</span>
       <br />
       <br />
       <span class="city">Chains</span>
