--- a/dishes.html
+++ b/dishes.html
@@ -146,10 +146,17 @@
       <br />
       <span class="more">Chicken steakhouse burger, Burger King</span>
       <br />
+      <span class="more">Chicken sarookh, Bayt Shawarma</span>
+      <br />
       <br />
       <span class="city">Cape Town</span>
       <br />
       <span class="once">Seafood platter, Kloof Street House</span>
+      <br />
+      <br />
+      <span class="city">Kashmir</span>
+      <br />
+      <span class="more">Lamb tuj, Khayyam</span>
       <br />
       <br />
       <span class="city">Istanbul</span>
