--- a/dishes.html
+++ b/dishes.html
@@ -38,6 +38,8 @@
       <br />
       <span class="more">Fried milk ice cream, Uchi</span>
       <br />
+      <span class="once">Fried chicken donut sandwich, Gourdough's Donuts</span>
+      <br />
       <span class="more"
         >Gingerbread chocolate chip pancakes, Magnolia Cafe</span
       >
@@ -45,34 +47,9 @@
       <span class="more">Texas Gold, Bennu Coffee</span>
       <br />
       <br />
-      <span class="city">San Francisco</span>
+      <span class="city">Cape Town</span>
       <br />
-      <span class="more">Clam garlic pizza, Golden Boy Pizza</span>
-      <br />
-      <span class="more">Hot honey pizza, Longbridge Pizza Co</span>
-      <br />
-      <span class="more">California burrito, El Capitan Taqueria</span>
-      <br />
-      <span class="once">Olive oil salt flake froyo, Food Hall</span>
-      <br />
-      <span class="more">Pastrami sandwich, Tartine Bakery</span>
-      <br />
-      <span class="more">Fried chicken and waffles, Cracked and Battered</span>
-      <br />
-      <span class="more">Young coconut, Farmhouse Thai</span>
-      <br />
-      <span class="more">Hummus and pita, Oren's Hummus</span>
-      <br />
-      <br />
-      <span class="city">Miami</span>
-      <br />
-      <span class="more">Omakase, Sushi Yasu Tanaka</span>
-      <br />
-      <span class="more">Lasagna, Sardomare Pasta Bar</span>
-      <br />
-      <span class="more">Cheese pizza, Mr O1</span>
-      <br />
-      <span class="once">Steak au poivre, Alamo Drafthouse</span>
+      <span class="once">Seafood platter, Kloof Street House</span>
       <br />
       <br />
       <span class="city">College Park</span>
@@ -84,16 +61,42 @@
       <span class="more">Spicy chicken naan burrito, Krazy Kebab</span>
       <br />
       <br />
-      <span class="city">Seoul</span>
+      <span class="city">Cornwall</span>
       <br />
-      <span class="more">Chewisty donut, Dunkin' Donuts</span>
+      <span class="once">Rei, Slice of Cornwall</span>
+      <br />
+      <span class="more"
+        >Onion jam and chicken liver toast, The Packet Inn Smokehouse</span
+      >
+      <br />
+      <span class="more">Roast lamb shoulder, The Packet Inn Smokehouse</span>
+      <br />
+      <span class="once"
+        >Singaporean chili crab, The Seafood Restaurant Padstow</span
+      >
       <br />
       <br />
-      <span class="city">Puerto Rico</span>
+      <span class="city">Istanbul</span>
       <br />
-      <span class="more">Purple mash, Bacao</span>
+      <span class="more">Burek, Lokanta Mimi</span>
       <br />
-      <span class="once">Onion jam goat cheese burger, Serafina</span>
+      <span class="more">Chocolate Baklava, Karaköy Güllüoğlu</span>
+      <br />
+      <br />
+      <span class="city">Kashmir</span>
+      <br />
+      <span class="more">Lamb tuj, Khayyam</span>
+      <br />
+      <br />
+      <span class="city">Miami</span>
+      <br />
+      <span class="more">Omakase, Sushi Yasu Tanaka</span>
+      <br />
+      <span class="more">Lasagna, Sardomare Pasta Bar</span>
+      <br />
+      <span class="more">Cheese pizza, Mr O1</span>
+      <br />
+      <span class="once">Steak au poivre, Alamo Drafthouse</span>
       <br />
       <br />
       <span class="city">New York City</span>
@@ -122,22 +125,13 @@
       <span class="city">Nice</span>
       <br />
       <span class="more">Croissant, Boulangerie-pâtisserie des musiciens</span>
-
       <br />
       <br />
-      <span class="city">Cornwall</span>
+      <span class="city">Puerto Rico</span>
       <br />
-      <span class="once">Rei, Slice of Cornwall</span>
+      <span class="more">Purple mash, Bacao</span>
       <br />
-      <span class="more"
-        >Onion jam and chicken liver toast, The Packet Inn Smokehouse</span
-      >
-      <br />
-      <span class="more">Roast lamb shoulder, The Packet Inn Smokehouse</span>
-      <br />
-      <span class="once"
-        >Singaporean chili crab, The Seafood Restaurant Padstow</span
-      >
+      <span class="once">Onion jam goat cheese burger, Serafina</span>
       <br />
       <br />
       <span class="city">Riyadh</span>
@@ -149,21 +143,28 @@
       <span class="more">Chicken sarookh, Bayt Shawarma</span>
       <br />
       <br />
-      <span class="city">Cape Town</span>
+      <span class="city">San Francisco</span>
       <br />
-      <span class="once">Seafood platter, Kloof Street House</span>
+      <span class="more">Clam garlic pizza, Golden Boy Pizza</span>
+      <br />
+      <span class="more">Hot honey pizza, Longbridge Pizza Co</span>
+      <br />
+      <span class="more">California burrito, El Capitan Taqueria</span>
+      <br />
+      <span class="once">Olive oil salt flake froyo, Food Hall</span>
+      <br />
+      <span class="more">Pastrami sandwich, Tartine Bakery</span>
+      <br />
+      <span class="more">Fried chicken and waffles, Cracked and Battered</span>
+      <br />
+      <span class="more">Young coconut, Farmhouse Thai</span>
+      <br />
+      <span class="more">Hummus and pita, Oren's Hummus</span>
       <br />
       <br />
-      <span class="city">Kashmir</span>
+      <span class="city">Seoul</span>
       <br />
-      <span class="more">Lamb tuj, Khayyam</span>
-      <br />
-      <br />
-      <span class="city">Istanbul</span>
-      <br />
-      <span class="more">Burek, Lokanta Mimi</span>
-      <br />
-      <span class="more">Chocolate Baklava, Karaköy Güllüoğlu</span>
+      <span class="more">Chewisty donut, Dunkin' Donuts</span>
       <br />
       <br />
       <span class="city">Chains</span>
@@ -177,7 +178,6 @@
       <span class="more">Filet o Fish, McDonald's</span>
       <br />
       <span class="more">Spicy chicken sandwich, Chik fil a</span>
-      <br />
     </p>
   </body>
 </html>
