--- a/dishes.html
+++ b/dishes.html
@@ -109,7 +109,7 @@
       <br />
       <span class="more">Chestnut agnolotti, Temple Court</span>
       <br />
-      <span class="more">Lamb burger, Tetsu</span>
+      <span class="once">Lamb burger, Tetsu</span>
       <br />
       <span class="more">Beef taco, Los Tacos Numero 1</span>
       <br />
