--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     </script>
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <meta charset="UTF-8" />
-    <title>Ibrahim Hashme</title>
+    <title>Ibbi Hashme</title>
     <meta
       name="google-site-verification"
       content="Jy0Eb07EPwXz4YzwfhA_TRdyul0EUWcpRbzMJ7sZdyQ"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="keywords" content="Ibrahim,Hashme,personal,website,portfolio" />
-    <meta name="author" content="Ibrahim Hashme" />
+    <meta name="keywords" content="Ibbi,Hashme,personal,website,portfolio" />
+    <meta name="author" content="Ibbi Hashme" />
     <link
       rel="stylesheet prefetch"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
@@ -48,7 +48,7 @@
         </div>
         <div style="text-align: center">
           <img src="images/pyramid.gif" class="imgcc" alt="animation" />
-          <h1 id="location">sf</h1>
+          <h1 id="location">nyc</h1>
         </div>
         <!-- <h3>thanks for stopping by!</h3> -->
         <p>
