--- a/index.html
+++ b/index.html
@@ -35,26 +35,70 @@
   <body class="pink-background col-md-12">
     <div class="container-fluid">
       <div class="row">
-        <div class="row mainlinks">
-          <div class="col-xs-6 pink-background">
-            <a href="./">where<span class="blockLink"></span></a>
-          </div>
-          <!-- <div class="col-xs-4 cyan-background">
-          <a href="done">done<span class="blockLink"></span></a>
-        </div> -->
-          <div class="col-xs-6 cyan-background">
-            <a href="hairy">hair<span class="blockLink"></span></a>
-          </div>
+        <div style="margin-bottom: 20px">
+          <p style="font-size: 130%; margin-bottom: 20px">
+            Currently in: <span id="location">NYC</span>
+          </p>
         </div>
-        <div style="text-align: center">
-          <img src="images/pyramid.gif" class="imgcc" alt="animation" />
-          <h1 id="location">nyc</h1>
-        </div>
-        <!-- <h3>thanks for stopping by!</h3> -->
         <p>
-          <!-- Check out some things I've <a href="done" class="textLink">done</a>, or draw me a fresh <a href="hairy" class="textLink">haircut</a>.
-        Feel free to reach out on <a href="https://m.me/ihashme" class="textLink" target="_blank">messenger</a> or shoot me an <a href="mailto:hi@ibbi.io" class="textLink" target="_blank">email</a>. -->
+          I was born in Malaysia to Kashmiri parents and raised mostly in Saudi
+          Arabia. I moved to America for college and started my first company,
+          <a href="https://proats.com" target="_blank">Proats</a>, which sold
+          custom liquid meals to campus athletes who, like me, found nutrition
+          tracking a pain. This paid for tuition.
         </p>
+        <p>
+          After I graduated, I spent a year living out of my backpack, busing
+          around America. By the end of that year I ended up in San Francisco,
+          met a few founders, and figured out what I wanted pretty quickly.
+        </p>
+        <p>
+          I learned to code, joined
+          <a href="https://lunchclub.com" target="_blank">Lunchclub</a> early,
+          and learned a ton working with
+          <a href="https://www.google.com/search?q=scott+wu" target="_blank"
+            >Scott Wu</a
+          >. Within two and a half years I was running four engineering teams.
+          When it became clear the company wasn't going to grow much further, I
+          helped pivot it to
+          <a href="https://lighter.xyz" target="_blank">Lighter</a> and then
+          left to figure out what I wanted to do next.
+        </p>
+        <p>
+          Since then I've been investing in friends' companies (most notably
+          <a href="https://cognition.ai" target="_blank">Cognition</a>,
+          <a href="https://sesame.com" target="_blank">Sesame</a>,
+          <a href="https://prosper.org" target="_blank">Prosper</a>,
+          <a href="https://modal.com" target="_blank">Modal</a>) and helping get
+          other people's ideas off the ground (<a
+            href="https://ami.app"
+            target="_blank"
+            >Ami</a
+          >, <a href="https://indent.com" target="_blank">Indent</a>,
+          <a href="https://moderncapital.com" target="_blank">Modern Capital</a
+          >).
+        </p>
+        <p>
+          I recently started working on a new company tackling the microplastics
+          problem (starting with the
+          <a href="https://treetainer.com" target="_blank">Treetainer</a>). I
+          live in New York but travel often, mostly to China and Italy, looking
+          into wools and microplastic alternatives.
+        </p>
+        <p>
+          Along the way, I've found a constant source of energy from teaching
+          and supporting outlier kids. That's what gives me life. Most recently
+          that's taken the form of
+          <a href="https://foundation.is" target="_blank">Foundation</a>.
+        </p>
+
+        <div style="text-align: center; margin-top: 40px">
+          <img
+            src="images/pyramid.gif"
+            style="width: 100%; max-width: 500px"
+            alt="animation"
+          />
+        </div>
 
         <!--
       <div class="col-md-6">
