--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="favicon.ico" />
   </head>
 
   <body class="pink-background col-md-12">
