--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <a href="https://sesame.com" target="_blank">Sesame</a>,
           <a href="https://prosper.org" target="_blank">Prosper</a>,
           <a href="https://modal.com" target="_blank">Modal</a>) and helping get
-          other people's ideas off the ground (<a
+          other peoples' ideas off the ground (<a
             href="https://ami.app"
             target="_blank"
             >Ami</a
