--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
         <p>
           I was born in Malaysia to Kashmiri parents and raised mostly in Saudi
           Arabia. I moved to America for college and started my first company,
-          <a href="https://proats.com" target="_blank">Proats</a>, which sold
-          custom liquid meals to campus athletes who, like me, found nutrition
-          tracking a pain. This paid for tuition.
+          Proats, which sold custom liquid meals to campus athletes who, like
+          me, found nutrition tracking a pain. This paid for tuition.
         </p>
         <p>
           After I graduated, I spent a year living out of my backpack, busing
