--- a/index.html
+++ b/index.html
@@ -55,13 +55,10 @@
         <p>
           I learned to code, joined
           <a href="https://lunchclub.com" target="_blank">Lunchclub</a> early,
-          and learned a ton working with
-          <a href="https://www.google.com/search?q=scott+wu" target="_blank"
-            >Scott Wu</a
-          >. Within two and a half years I was running four engineering teams.
-          When it became clear the company wasn't going to grow much further, I
-          helped pivot it to
-          <a href="https://lighter.xyz" target="_blank">Lighter</a> and then
+          and learned a ton working with some really smart people. Within two
+          and a half years I was running four engineering teams. When it became
+          clear the company wasn't going to grow much further, I helped pivot it
+          to <a href="https://lighter.xyz" target="_blank">Lighter</a> and then
           left to figure out what I wanted to do next.
         </p>
         <p>
