--- a/mp.html
+++ b/mp.html
@@ -45,8 +45,8 @@
       <br /><br />
       <strong>The Trajectory Is Clear</strong><br />
       Every new study finds higher microplastic concentrations in human tissue
-      than the last. Most recently, a 50% increase in brain tissue microplastic
-      prevalence over the past 8 years
+      than the last. Most recently, we found a 50% increase in brain tissue
+      microplastic prevalence over the past 8 years
       <a href="https://pubmed.ncbi.nlm.nih.gov/39901044/" target="_blank">[9]</a
       >. The burden on the human body is compounding: what we take in today
       stays with us for decades, and future generations are born contaminated.
