--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="row">
         <div style="margin-bottom: 20px">
           <p style="font-size: 130%; margin-bottom: 20px">
-            Currently in: <span id="location">europe?</span>
+            Currently in: <span id="location">nyc</span>
           </p>
         </div>
         <p>
